test/trailing_tag.stderr
error: encountered a closing HTML element "button" without a corresponding opening tag.
 --> test/trailing_tag.rs:8:11
  |
8 |         </button> // <- trailing
  |           ^^^^^^
